first alpha of customers and jobs and import process

--- a/web_front/templates/editjob.html
+++ b/web_front/templates/editjob.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="property-form-container container mt-5">
-    <h2>Edit Property</h2>
+    <h2>Edit Job</h2>
     <form method="post" class="mt-5">
         {% csrf_token %}
         {% crispy form form.helper %}
