--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     {% block title %}
-      <title>{{ welcome_text }}</title>
+    <title>{{ welcome_text }}</title>
     {% endblock %}
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -19,36 +19,39 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              
-              {% comment %} <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="{% url 'about' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  About
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="{% url 'about' %}">About</a></li>
+                  <li><a class="dropdown-item" href="{% url 'contact' %}">Contact Us</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="{% url 'help_menu' %}">Help</a></li>
                 </ul>
-              </li> {% endcomment %}
-              
-              {% comment %} <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'about' %}">About</a>
               </li>
               {% if user.is_authenticated %}
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="{% url 'about' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Admin
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{% url 'import_customers' %}">Import Customers</a></li>
+                  <li><a class="dropdown-item" href="{% url 'contact' %}">Contact Us</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="{% url 'help_menu' %}">Help</a></li>
+                </ul>
+              </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'customers' %}">Customers</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'properties' %}">Properties</a>
               </li>
-              {% endif %}
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'contact' %}">Contact Us</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'jobs' %}">Jobs</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'help' %}">Help</a>
-              </li> {% endcomment %}
+              {% endif %}
             </ul>
             {% if user.is_authenticated %}
             <div class="navbar-nav">
