--- a/web_front/templates/newprop.html
+++ b/web_front/templates/newprop.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 <div class="container mt-5">
-    <h2>Edit Customer</h2>
+    <h2>Add Property</h2>
 
     <!-- Display any potential form errors -->
     {% if form.error %}
@@ -17,11 +18,17 @@
         </div>
     {% endif %}
 
-    <!-- Form for editing a customer -->
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Save</button>
+        <label for="customerSelect">Select Customer:</label>
+        <select id="customerSelect" name="customer">
+            {% for customer in customers %}
+                <option value="{{ customer.pk }}">{{ customer }}</option>
+            {% endfor %}
+        </select>
+
+        {% crispy formset formset.form.helper %}
+
     </form>
 </div>
 {% endblock %}
